--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
-    "recharts": "^2.1.13",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "victory": "^36.5.3"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
