--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0",
-    "victory": "^36.5.3"
+    "recharts": "2.1.12",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
