--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "target": "es5",
     "lib": [
       "dom",
@@ -24,8 +24,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "pages/analytics/index.jsx",
-    "pages/analytics/index.jsx"
+    "src/pages/analytics/index.jsx",
+    "src/pages/analytics/index.jsx"
   ],
   "exclude": [
     "node_modules"
